commit on master

--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
                 <div class="links">
                     <p>Useful links :</p>
                     <ul>
-                        <li><a href="style.css">Original CSS</a></li>
-                        <li><a href="style.scss">Original SASS</a></li>
+                        <li><a href="assets/css/originalCSS.css">Original CSS</a></li>
+                        <li><a href="assets/css/originalSass.scss">Original SASS</a></li>
                         <li><a href="sitemap.xml">Sitemap</a></li>
                     </ul>
                 </div>
