--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Portfolio | Aleksandar Živić</title>
     <!-- CSS AND ICON -->
     <link rel="shortcut icon" href="assets/img/icon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/responsive.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style-min.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/responsive-min.css" type="text/css" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
