--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="mailto:aleksandar.zivic.7.21@ict.edu.rs"/>
-    <meta name="keywords" content="secure,time,website,application,database"/>
+    <meta name="keywords" content="project,time,website,application,database,technologies"/>
     <meta name="copyright" content="Portfolio Aleksandar Zivic 2022"/>
     <meta name="language" content="english"/>
     <meta name="description" content="My priority is saving clients time with great applications and websites, which my other projects could approve."/>
